* Added additional debug messages when building as debug binary
* Added support for DSO-5200

2010-08-31  Oliver Haag  <oliver.haag@gmail.com>
* Added manual command sending with Shift+C when bulding as debug binary
* Fixed some uninitialized values in Hantek::Control
* Added debug messages for capture state when building as debug binary

2010-09-15  Oliver Haag  <oliver.haag@gmail.com>
* Made export dialog title translatable
* Fixed export shortcut
* Added csv export

2010-09-15  Oliver Haag  <oliver.haag@gmail.com>
* Added OSX patches by Florian Schirmer <jolt@tuxbox.org>, thanks :)

2010-09-16  Oliver Haag  <oliver.haag@gmail.com>
* Added csv export return value to doExport method
* Fixed DSO-2150 samplerates

2010-09-21  Oliver Haag  <oliver.haag@gmail.com>
* Fixed print shortcut
* Made samplerate calculation more flexible
* DSO-5200 data conversion bugfix
* Exporter::setFormat not filtering CSV format out anymore
* Removed misplaced " before voltages in exported CSV file

2010-09-27  Oliver Haag  <oliver.haag@gmail.com>
* Some bugfixes for the DSO-5200
* Simplified trigger point calculation and correct handling for fast rate mode
* Recalculating pretrigger position after samplerate changes

2010-09-29  Oliver Haag  <oliver.haag@gmail.com>
* Added spectrums to exported csv files
* Using autocorrelation for frequency detection now
* Some undefined value bugfixes

2010-12-13  Oliver Haag  <oliver.haag@gmail.com>
* Triggermode Auto working correctly now
* Improved frequency detection routine

2011-01-22  Oliver Haag  <oliver.haag@gmail.com>
* Storing positions of docking windows and toolbars in settings now
* Added submenu to show/hide docking windows and toolbars to the View menu

2011-01-22  Oliver Haag  <oliver.haag@gmail.com>
* Bugfix: Wrong pretrigger position when using a DSO-2090
* Improved timing of the Hantek DSO sampling routine
* Bugfix: Wrong misc field in measurement table after enabling a channel