@@ -115,3 +115,6 @@
 * Bugfix: Wrong pretrigger position when using a DSO-2090
 * Improved timing of the Hantek DSO sampling routine
 * Bugfix: Wrong misc field in measurement table after enabling a channel
+
+2011-01-23  Oliver Haag  <oliver.haag@gmail.com>
+* Properly applying saved dock window and toolbar positions on startup now
